--- a/order/index.html
+++ b/order/index.html
@@ -7,15 +7,17 @@
   
   <title>Stone Grill's  — Online Reservation</title>
   
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
+  <!-- Google AdSense -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9771423771078445"
      crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-9771423771078445">
+  <meta name="google-adsense-account" content="ca-pub-9771423771078445">
+
   <!-- Meta Pixel Code -->
   <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    if(!f._fbq)f._fbq=n;n.push=n.loaded=!0;n.version='2.0';
     n.queue=[];t=b.createElement(e);t.async=!0;
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
@@ -28,8 +30,9 @@
          src="https://www.facebook.com/tr?id=643206718690040&ev=PageView&noscript=1" />
   </noscript>
   <!-- End Meta Pixel Code -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
+  <!-- CryptoJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 
   <!-- Basic SEO -->
   <meta name="description" content="Order sizzling plates, fresh seafood, and Filipino favorites from Stone Grill Restaurant in Leyte. Dine-in or take-out — fast, easy, and delicious!">
@@ -54,8 +57,19 @@
 
   <!-- Theme / Icons / CSS -->
   <meta name="theme-color" content="#8db600">
-  <link rel="icon" href="assets/icons/favicon-32.png" sizes="32x32">
-  <link rel="apple-touch-icon" href="assets/icons/apple-touch-180.png">
+
+  <!-- FAVICONS (keep old small ones for tabs) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32.png">
+
+  <!-- APPLE TOUCH ICONS + MAIN 512 ICON FOR PWA / FAVORITES / HOME SCREEN -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/apple-touch-180.png">
+  <!-- NEW: main big icon for iOS & PWA -->
+  <link rel="apple-touch-icon" sizes="512x512" href="/order/assets/icons/icon-512.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="/order/assets/icons/icon-512.png">
+
+  <!-- NEW: order-specific manifest -->
+  <link rel="manifest" href="/order/manifest.json">
+
   <link rel="stylesheet" href="style.css?v=13">
 
   <!-- JSON-LD Structured Data -->
