--- a/reflections/index.html
+++ b/reflections/index.html
@@ -41,7 +41,7 @@
       <!-- =========================================
            1) CARD: DIVINE PREMISE
            ========================================= -->
-      <article class="card">
+      <article class="card">k
         <div class="left">
           <a class="book-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
@@ -54,7 +54,7 @@
           <h3><a class="title-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">THE DIVINE PREMISE</a></h3>
           <p>the premise of a perfect living God. </p>
         <section class="audio-wrap" id="audioMount-divinepremise">
-            <p class="label">🎧 play to Listen: <strong>.       </strong></p>
+            <p class="label">🎧 play to Listen: <strong>the devine premise </strong></p>
             <audio controls preload="auto" style="width:100%">
               <source src="/reflections/pages/divine-hiddeness/premiseofgod.mp3" type="audio/mpeg">
               Your browser does not support the audio element.
