--- a/reflections/index.html
+++ b/reflections/index.html
@@ -41,7 +41,7 @@
       <!-- =========================================
            1) CARD: DIVINE PREMISE
            ========================================= -->
-      <article class="card">k
+      <article class="card">
         <div class="left">
           <a class="book-link" href="/reflections/pages/divine-hiddeness/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
