Add reflections-header stylesheet and script

--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/divine-hiddeness/read.html">
 
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css">
   <style>
     /* Minimalist fixed header */
     .header {
@@ -95,7 +95,9 @@
     }
   </script>
 </head>
+<div id="ref-header-placeholder"></div>
 
+<main class="page-content">
 <body>
 
   <!-- HEADER -->
@@ -349,6 +351,6 @@
       }
     }
   </script>
-
+<script src="/reflections/assets/reflections-header.js"></script>
 </body>
 </html>
