Add header placeholder and additional scripts

--- a/reflections/pages/diety/read.html
+++ b/reflections/pages/diety/read.html
@@ -10,7 +10,7 @@
   <!-- 🔗 Omnibus player + stylesheet -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
   <script src="/reflections/assets/audio-system.js"></script>
-
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css">
   <style>
     :root{
       --bg:#0e0e0f; --paper:#141415; --ink:#f1f1f1; --muted:#aaa; --accent:#ffb020; --rule:#252526;
@@ -47,6 +47,9 @@
 </head>
 
 <body>
+  <div id="ref-header-placeholder"></div>
+
+<main class="page-content">
   <header>
     <div class="wrap">
       <a class="back" href="/reflections/index.html">← Back to Reflections</a>
@@ -141,5 +144,6 @@ document.addEventListener('DOMContentLoaded', () => {
       .catch(err => console.log("SW failed:", err));
   }
 </script>
+  <script src="/reflections/assets/reflections-header.js"></script>
 </body>
 </html>
