--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css">
+    <link rel="stylesheet" href="/reflections/assets/reflections-header.css">
   <style>
     /* Minimalist fixed header */
     .header {
@@ -97,6 +98,10 @@
 </head>
 
 <body>
+  <div id="ref-header-placeholder"></div>
+
+<main class="page-content">
+  
 <div id="ref-header-placeholder"></div>
 
 <main class="page-content">
@@ -351,6 +356,7 @@
       }
     }
   </script>
+<script src="/reflections/assets/reflections-header.js"></script>
 <script src="/reflections/assets/reflections-header.js"></script>
 </body>
 </html>
