--- a/reflections/pages/divine-hiddeness/read.html
+++ b/reflections/pages/divine-hiddeness/read.html
@@ -401,6 +401,9 @@
           <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
           <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">The Divine Premise</a></li>
           <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html" class="active">The God We Created</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
           <!-- Add other reflections here -->
         </ul>
       </nav>
