--- a/reflections/pages/initial-premise/read.html
+++ b/reflections/pages/initial-premise/read.html
@@ -16,6 +16,8 @@
 
   <link rel="icon" href="/reflections/assets/favicon.ico">
   <link rel="stylesheet" href="/reflections/assets/reflections.css">
+  <!-- Unified Reflections Header CSS -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css">
 
   <style>
     /* Local page tweaks that won’t fight your main stylesheet */
@@ -47,6 +49,11 @@
   <script defer src="/reflections/assets/audio-system.js"></script>
 </head>
 <body>
+
+  <!-- Unified Reflections Header will be injected here -->
+  <div id="reflections-header"></div>
+
+  <!-- Your existing page header (kept) -->
   <header>
     <img src="android-chrome-512x512.png" alt="Stone Grill Press">
     <div>
@@ -149,6 +156,10 @@
       .then(reg => console.log("SW registered"))
       .catch(err => console.log("SW failed:", err));
   }
-</script>
+  </script>
+
+  <!-- Unified Reflections Header JS -->
+  <script src="/reflections/assets/reflections-header.js" defer></script>
+
 </body>
 </html>
