--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -24,6 +24,7 @@
   <meta property="og:image:alt" content="A Journey from Duality to Oneness">
 
   <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
   <script src="/reflections/assets/audio-system.js?v=12"></script>
   <link rel="manifest" href="/reflections/manifest.json?v=2">
@@ -31,17 +32,236 @@
   <meta name="theme-color" content="#ff6b3d">
 
   <style>
+    /* =========================
+       GLOBAL FIXED HEADER
+    ========================== */
+    .ref-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+      background: #1f1815;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
+    }
+
+    .ref-header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0.5rem 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    /* Brand / logo */
+    .brand-link {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      text-decoration: none;
+    }
+
+    .brand-mark {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      border: 2px solid #ff6b3d;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.9rem;
+      color: #ff6b3d;
+    }
+
+    .brand-text {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.1;
+    }
+
+    .brand-title {
+      font-size: 0.9rem;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+
+    .brand-subtitle {
+      font-size: 0.7rem;
+      color: #f0e0d0;
+      opacity: 0.8;
+    }
+
+    /* Nav */
+    .ref-nav {
+      margin-left: 1rem;
+      flex: 1;
+    }
+
+    .ref-nav ul {
+      display: flex;
+      gap: 0.75rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .ref-nav a {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.35rem 0.7rem;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      text-decoration: none;
+      color: #f3e4d5;
+      border: 1px solid transparent;
+      white-space: nowrap;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover {
+      background: rgba(255, 107, 61, 0.14);
+      border-color: rgba(255, 107, 61, 0.4);
+    }
+
+    .ref-nav a.active {
+      background: #ff6b3d;
+      color: #1f1815;
+      border-color: #ff6b3d;
+      font-weight: 600;
+    }
+
+    /* Right side of header */
+    .ref-header-right {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .current-page-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      padding: 0.3rem 0.7rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      font-size: 0.75rem;
+      color: #f7e9dd;
+    }
+
+    .page-icon {
+      font-size: 0.85rem;
+      color: #ffb347;
+    }
+
+    .back-home-link {
+      font-size: 0.75rem;
+      text-decoration: none;
+      color: #ffb347;
+      padding: 0.3rem 0.5rem;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 179, 71, 0.5);
+      background: rgba(0, 0, 0, 0.25);
+      white-space: nowrap;
+    }
+
+    .back-home-link:hover {
+      background: #ffb347;
+      color: #1f1815;
+    }
+
+    .nav-toggle {
+      display: none;
+      border: 1px solid rgba(255, 255, 255, 0.35);
+      background: transparent;
+      border-radius: 6px;
+      padding: 0.2rem 0.45rem;
+      font-size: 1.1rem;
+      color: #f7e9dd;
+    }
+
+    @media (max-width: 900px) {
+      .brand-subtitle {
+        display: none;
+      }
+
+      .ref-nav ul {
+        gap: 0.4rem;
+      }
+
+      .ref-nav a {
+        padding: 0.25rem 0.55rem;
+        font-size: 0.75rem;
+      }
+
+      .current-page-badge {
+        display: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .ref-header-inner {
+        flex-wrap: nowrap;
+      }
+
+      .ref-nav {
+        position: fixed;
+        top: 56px;
+        left: 0;
+        right: 0;
+        background: #1f1815;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.25s ease;
+        margin-left: 0;
+      }
+
+      .ref-nav ul {
+        flex-direction: column;
+        padding: 0.5rem 1rem 0.8rem;
+        gap: 0.25rem;
+      }
+
+      .ref-nav a {
+        width: 100%;
+        justify-content: flex-start;
+      }
+
+      .ref-header.nav-open .ref-nav {
+        max-height: 260px;
+      }
+
+      .nav-toggle {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .back-home-link {
+        font-size: 0.7rem;
+        padding: 0.2rem 0.45rem;
+      }
+    }
+
+    /* =========================
+       PAGE-SPECIFIC STYLES
+    ========================== */
     body {
       background: #1f1815;
       color: #f3e6dd;
       font-family: "Georgia", "Times New Roman", serif;
       line-height: 1.75;
       margin: 0;
-      padding: 0;
+      padding: 4.2rem 0 0 0; /* space for fixed header */
     }
     main {
       max-width: 780px;
-      margin: 60px auto;
+      margin: 0 auto;
       padding: 0 20px 80px;
     }
     header {
@@ -84,21 +304,64 @@
       color: #c9b0a4;
       margin-top: 50px;
     }
-    a.back {
-      display: inline-block;
-      background: #ff7a00;
-      color: white;
-      text-decoration: none;
-      padding: 10px 20px;
-      border-radius: 4px;
-      font-weight: bold;
-      margin-bottom: 40px;
-    }
-    a.back:hover { background: #ff8f26; }
   </style>
+
+  <!-- ========== SERVICE WORKER ========== -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(reg => console.log("SW registered"))
+        .catch(err => console.log("SW failed:", err));
+    }
+  </script>
 </head>
 
 <body>
+
+  <!-- FIXED GLOBAL HEADER -->
+  <header class="ref-header">
+    <div class="ref-header-inner">
+
+      <!-- Left brand -->
+      <div class="ref-header-left">
+        <a href="/reflections/index.html" class="brand-link">
+          <span class="brand-mark">✦</span>
+          <span class="brand-text">
+            <span class="brand-title">Moments of Solitude</span>
+            <span class="brand-subtitle">Stone Grill Reflections</span>
+          </span>
+        </a>
+      </div>
+
+      <!-- Center nav -->
+      <nav class="ref-nav" aria-label="Reflections navigation">
+        <ul>
+          <li><a href="/reflections/index.html">All Reflections</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html" class="active">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
+        </ul>
+      </nav>
+
+      <!-- Right: badge + back + hamburger -->
+      <div class="ref-header-right">
+        <div class="current-page-badge">
+          <span class="page-icon">△</span>
+          <span class="page-label">The Lost Language of Metaphor</span>
+        </div>
+
+        <a href="/reflections/index.html" class="back-home-link">← Back to Reflections</a>
+
+        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+          ☰
+        </button>
+      </div>
+
+    </div>
+  </header>
+
   <main>
     <!-- ========== HEADER ========== -->
     <header>
@@ -106,9 +369,6 @@
       <h1>The Lost Language of Metaphor</h1>
       <p class="meta">By Ninox Antolihao • First Edition — 2025</p>
     </header>
-
-    <!-- Primary back button -->
-    <a href="/reflections/index.html" class="back">← Back to Reflections</a>
 
     <!-- 🎧 Audio Player (same folder; TTS-ready) -->
     <script>
@@ -337,44 +597,43 @@
     </footer>
   </main>
 
-  <!-- Secondary back link (same style as other reflections) -->
-  <div class="wrap" style="display:flex; text-align:left;">
-    <a class="back" href="/reflections/index.html" style="color:var(--accent); text-decoration:none; font-weight:700">← Back to Reflections</a>
-  </div>
-
-  <!-- ========== AUTOPLAY / BACK BRIDGE ========== -->
+  <!-- ========== AUTOPLAY BRIDGE (back button logic removed; header handles navigation) ========== -->
   <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const audio = document.querySelector('audio');
-    const p = new URLSearchParams(location.search);
-    const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
+    document.addEventListener('DOMContentLoaded', () => {
+      const audio = document.querySelector('audio');
+      const p = new URLSearchParams(location.search);
+      const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
 
-    if (fromIndex && audio) {
-      audio.play().catch(() => {
-        console.log('Autoplay blocked; user must press play.');
-      });
-      sessionStorage.removeItem('autoplayAudio');
-    }
-
-    // Optional: show Back button if user came from index
-    if (p.get('back') === '1' || sessionStorage.getItem('showBack') === 'true') {
-      const back = document.createElement('a');
-      back.href = '/reflections/index.html';
-      back.className = 'btn ghost';
-      back.textContent = '← Back to Reflections';
-      (document.querySelector('header') || document.body).prepend(back);
-      sessionStorage.removeItem('showBack');
-    }
-  });
+      if (fromIndex && audio) {
+        audio.play().catch(() => {
+          console.log('Autoplay blocked; user must press play.');
+        });
+        sessionStorage.removeItem('autoplayAudio');
+      }
+    });
   </script>
 
-  <!-- ========== SERVICE WORKER ========== -->
+  <!-- Hamburger toggle for mobile header -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js')
-        .then(reg => console.log("SW registered"))
-        .catch(err => console.log("SW failed:", err));
-    }
+    (function () {
+      const header = document.querySelector('.ref-header');
+      const toggle = document.querySelector('.nav-toggle');
+      const nav = document.querySelector('.ref-nav');
+
+      if (!header || !toggle || !nav) return;
+
+      toggle.addEventListener('click', () => {
+        const isOpen = header.classList.toggle('nav-open');
+        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+      });
+
+      nav.addEventListener('click', (e) => {
+        if (e.target.tagName.toLowerCase() === 'a') {
+          header.classList.remove('nav-open');
+          toggle.setAttribute('aria-expanded', 'false');
+        }
+      });
+    })();
   </script>
 </body>
 </html>
