--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -1,43 +1,352 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- ========== META & HEAD ========== -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>The Madness of Faith — Ninox Antolihao</title>
   <meta name="description" content="Let faith never destroy. Let it guide.">
 
-  <link rel="stylesheet" href="/reflections/assets/reflections.css">
-
   <meta property="og:title" content="The Madness of Faith — Ninox Antolihao">
   <meta property="og:description" content="Let faith never destroy. Let it guide.">
   <meta property="og:image" content="cover.png">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html">
+
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+
+  <!-- Global assets -->
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
+  <link rel="stylesheet" href="/reflections/assets/reflections.css">
 
   <style>
-    body { margin:0; padding:0; background:#1f1815; color:#f3e6dd; }
-    main.page-wrap { padding:0 1rem; }
-    article.content { max-width:800px; margin:0 auto; line-height:1.7; }
-    header, footer { padding:1rem; text-align:center; }
-    h1, h2, p { margin-left:auto; margin-right:auto; }
-    header img { display:block; margin:0 auto 1rem; max-width:140px; height:auto; }
-    header { padding-top:1rem; padding-bottom:0.5rem; }
+    /* =========================
+       GLOBAL FIXED HEADER
+    ========================== */
+    .ref-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+      background: #1f1815;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
+    }
+
+    .ref-header-inner {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0.5rem 1rem;
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
+
+    /* Brand / logo */
+    .brand-link {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      text-decoration: none;
+    }
+
+    .brand-mark {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      border: 2px solid #ff6b3d;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.9rem;
+      color: #ff6b3d;
+    }
+
+    .brand-text {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.1;
+    }
+
+    .brand-title {
+      font-size: 0.9rem;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+
+    .brand-subtitle {
+      font-size: 0.7rem;
+      color: #f0e0d0;
+      opacity: 0.8;
+    }
+
+    /* Nav */
+    .ref-nav {
+      margin-left: 1rem;
+      flex: 1;
+    }
+
+    .ref-nav ul {
+      display: flex;
+      gap: 0.75rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .ref-nav a {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.35rem 0.7rem;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      text-decoration: none;
+      color: #f3e4d5;
+      border: 1px solid transparent;
+      white-space: nowrap;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover {
+      background: rgba(255, 107, 61, 0.14);
+      border-color: rgba(255, 107, 61, 0.4);
+    }
+
+    .ref-nav a.active {
+      background: #ff6b3d;
+      color: #1f1815;
+      border-color: #ff6b3d;
+      font-weight: 600;
+    }
+
+    /* Right side of header */
+    .ref-header-right {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .current-page-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      padding: 0.3rem 0.7rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      font-size: 0.75rem;
+      color: #f7e9dd;
+    }
+
+    .page-icon {
+      font-size: 0.85rem;
+      color: #ffb347;
+    }
+
+    .back-home-link {
+      font-size: 0.75rem;
+      text-decoration: none;
+      color: #ffb347;
+      padding: 0.3rem 0.5rem;
+      border-radius: 999px;
+      border: 1px solid rgba(255, 179, 71, 0.5);
+      background: rgba(0, 0, 0, 0.25);
+      white-space: nowrap;
+    }
+
+    .back-home-link:hover {
+      background: #ffb347;
+      color: #1f1815;
+    }
+
+    .nav-toggle {
+      display: none;
+      border: 1px solid rgba(255, 255, 255, 0.35);
+      background: transparent;
+      border-radius: 6px;
+      padding: 0.2rem 0.45rem;
+      font-size: 1.1rem;
+      color: #f7e9dd;
+    }
+
+    @media (max-width: 900px) {
+      .brand-subtitle {
+        display: none;
+      }
+
+      .ref-nav ul {
+        gap: 0.4rem;
+      }
+
+      .ref-nav a {
+        padding: 0.25rem 0.55rem;
+        font-size: 0.75rem;
+      }
+
+      .current-page-badge {
+        display: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .ref-header-inner {
+        flex-wrap: nowrap;
+      }
+
+      .ref-nav {
+        position: fixed;
+        top: 56px;
+        left: 0;
+        right: 0;
+        background: #1f1815;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.25s ease;
+        margin-left: 0;
+      }
+
+      .ref-nav ul {
+        flex-direction: column;
+        padding: 0.5rem 1rem 0.8rem;
+        gap: 0.25rem;
+      }
+
+      .ref-nav a {
+        width: 100%;
+        justify-content: flex-start;
+      }
+
+      .ref-header.nav-open .ref-nav {
+        max-height: 260px;
+      }
+
+      .nav-toggle {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .back-home-link {
+        font-size: 0.7rem;
+        padding: 0.2rem 0.45rem;
+      }
+    }
+
+    /* =========================
+       PAGE-SPECIFIC STYLES
+    ========================== */
+    body {
+      margin: 0;
+      padding: 4.2rem 0 0 0; /* space for fixed header */
+      background:#1f1815;
+      color:#f3e6dd;
+    }
+
+    main.page-wrap {
+      padding:0 1rem;
+    }
+
+    article.content {
+      max-width:800px;
+      margin:0 auto;
+      line-height:1.7;
+    }
+
+    header.page-header,
+    footer.page-footer {
+      padding:1rem;
+      text-align:center;
+    }
+
+    header.page-header img {
+      display:block;
+      margin:0 auto 1rem;
+      max-width:140px;
+      height:auto;
+    }
+
+    header.page-header {
+      padding-top:1rem;
+      padding-bottom:0.5rem;
+    }
   </style>
+
+  <!-- Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js')
+        .then(reg => console.log("SW registered"))
+        .catch(err => console.log("SW failed:", err));
+    }
+  </script>
 </head>
 <body>
-  <header>
+
+  <!-- FIXED GLOBAL HEADER -->
+  <header class="ref-header">
+    <div class="ref-header-inner">
+
+      <!-- Left brand -->
+      <div class="ref-header-left">
+        <a href="/reflections/index.html" class="brand-link">
+          <span class="brand-mark">✦</span>
+          <span class="brand-text">
+            <span class="brand-title">Moments of Solitude</span>
+            <span class="brand-subtitle">Stone Grill Reflections</span>
+          </span>
+        </a>
+      </div>
+
+      <!-- Center nav -->
+      <nav class="ref-nav" aria-label="Reflections navigation">
+        <ul>
+          <li><a href="/reflections/index.html">All Reflections</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">The Divine Premise</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html" class="active">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The Fullness that Needs Nothing</a></li>
+        </ul>
+      </nav>
+
+      <!-- Right: badge + back + hamburger -->
+      <div class="ref-header-right">
+        <div class="current-page-badge">
+          <span class="page-icon">△</span>
+          <span class="page-label">The Madness of Faith</span>
+        </div>
+
+        <a href="/reflections/index.html" class="back-home-link">← Back to Reflections</a>
+
+        <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+          ☰
+        </button>
+      </div>
+
+    </div>
+  </header>
+
+  <!-- PAGE HEADER -->
+  <header class="page-header">
     <img src="/reflections/assets/logo1.PNG" alt="Stone Grill Logo">
     <h1>The Madness of Faith</h1>
     <p class="meta">By Ninox Antolihao • First Edition 2025</p>
   </header>
 
   <!-- AUDIO: native first; JS will enhance and auto-fallback -->
-  <section class="audio-wrap" id="audioMount" style="margin:16px 0;">
-  <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
-  <audio id="nativeAudio" controls preload="auto" style="width:100%">
-    <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-  <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
-</section>
+  <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
+    <p class="label">🎧 Audio Reflection: <strong>The Madness of Faith</strong></p>
+    <audio id="nativeAudio" controls preload="auto" style="width:100%">
+      <source src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+    <button id="stopAudio" class="btn ghost" style="margin-top:8px">⏹ Stop</button>
+  </section>
 
   <main class="page-wrap">
     <article class="content">
@@ -52,11 +361,6 @@
       <p>The true sacred does not demand blindness. It enters through clarity, through gentleness, through the quiet discipline of a mind that still dares to question. For a light that burns the eyes is not enlightenment — it is fire pretending to be grace.</p>
       <p>Faith was meant to lift the heart, not chain it. It was meant to awaken, not to numb. If there is a God, He would not ask us to crawl in darkness when He gave us eyes to see.</p>
       <p>Let faith, then, be the courage to think — and the humility to admit we don’t know. Let it never destroy. Let it <strong>guide</strong>.</p>
-
-      <a href="/reflections/index.html" class="back"
-         style="display:inline-block;margin-top:1rem;color:#ff6f3c;text-decoration:none;font-weight:bold;">
-         ← Back to Reflections
-      </a>
 
       <section class="download-share" style="margin-top:1.25rem">
         <!-- PDF inside the same FOLDER (fath) -->
@@ -75,40 +379,56 @@
     </article>
   </main>
 
-  <footer>
+  <footer class="page-footer">
     <p>© 2025 Ninox Antolihao · Stone Grill Press</p>
   </footer>
 
+  <!-- Autoplay only (no extra back button injection; header handles nav) -->
   <script>
-document.addEventListener('DOMContentLoaded', () => {
-  const audio = document.querySelector('audio');
-  const p = new URLSearchParams(location.search);
-  const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
+    document.addEventListener('DOMContentLoaded', () => {
+      const audio = document.querySelector('audio');
+      const p = new URLSearchParams(location.search);
+      const fromIndex = p.get('autoplay') === '1' || sessionStorage.getItem('autoplayAudio') === 'true';
 
-  if (fromIndex && audio) {
-    audio.play().catch(() => {
-      console.log('Autoplay blocked; user must press play.');
+      if (fromIndex && audio) {
+        audio.play().catch(() => {
+          console.log('Autoplay blocked; user must press play.');
+        });
+        sessionStorage.removeItem('autoplayAudio');
+      }
+
+      // Simple stop button for native player
+      const stopBtn = document.getElementById('stopAudio');
+      if (stopBtn && audio) {
+        stopBtn.addEventListener('click', () => {
+          audio.pause();
+          audio.currentTime = 0;
+        });
+      }
     });
-    sessionStorage.removeItem('autoplayAudio');
-  }
+  </script>
 
-  // Optional: show Back button if user came from index
-  if (p.get('back') === '1' || sessionStorage.getItem('showBack') === 'true') {
-    const back = document.createElement('a');
-    back.href = '/reflections/index.html';
-    back.className = 'btn ghost';
-    back.textContent = '← Back to Reflections';
-    (document.querySelector('header') || document.body).prepend(back);
-    sessionStorage.removeItem('showBack');
-  }
-});
-</script>
-<script>
-  if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/reflections/sw.js')
-      .then(reg => console.log("SW registered"))
-      .catch(err => console.log("SW failed:", err));
-  }
-</script>
+  <!-- Hamburger toggle for mobile header -->
+  <script>
+    (function () {
+      const header = document.querySelector('.ref-header');
+      const toggle = document.querySelector('.nav-toggle');
+      const nav = document.querySelector('.ref-nav');
+
+      if (!header || !toggle || !nav) return;
+
+      toggle.addEventListener('click', () => {
+        const isOpen = header.classList.toggle('nav-open');
+        toggle.setAttribute('aria-expanded', isOpen ? 'true' : 'false');
+      });
+
+      nav.addEventListener('click', (e) => {
+        if (e.target.tagName.toLowerCase() === 'a') {
+          header.classList.remove('nav-open');
+          toggle.setAttribute('aria-expanded', 'false');
+        }
+      });
+    })();
+  </script>
 </body>
 </html>
