--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -18,7 +18,6 @@
   <!-- Main stylesheet -->
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=12">
 
-
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Paradox of God — Solitude Reflections">
@@ -90,10 +89,28 @@
       color:#f3e6dd;
       font-size:.85rem;
       background:rgba(0,0,0,0.25);
+      white-space:nowrap;
+      flex-shrink:0;
     }
     .back-link span.icon {
       font-size:1rem;
       line-height:1;
+    }
+
+    /* Cover icon in header */
+    .cover-icon {
+      width:40px;
+      height:40px;
+      border-radius:10px;
+      object-fit:cover;
+      flex-shrink:0;
+      box-shadow:0 0 8px rgba(0,0,0,0.4);
+    }
+
+    .title-block {
+      display:flex;
+      flex-direction:column;
+      min-width:0;
     }
     .title-block h1 {
       margin:0;
@@ -113,6 +130,7 @@
       margin-bottom:1.25rem;
       font-size:.8rem;
       color:#c9b0a4;
+      flex-wrap:wrap;
     }
     .pill {
       display:inline-flex;
@@ -122,6 +140,7 @@
       border-radius:999px;
       border:1px solid rgba(201,176,164,0.4);
       background:rgba(0,0,0,0.35);
+      white-space:nowrap;
     }
     .audio-wrap {
       margin:1rem 0 1.5rem;
@@ -149,6 +168,7 @@
       gap:.75rem;
       font-size:.8rem;
       color:#c9b0a4;
+      flex-wrap:wrap;
     }
     .btn {
       display:inline-flex;
@@ -162,6 +182,7 @@
       font-weight:500;
       background:#ff6b3d;
       color:#1f1815;
+      white-space:nowrap;
     }
     .btn.secondary {
       background:rgba(0,0,0,0.25);
@@ -254,6 +275,15 @@
       margin-left: 1rem;
       flex-shrink: 0;
     }
+
+    @media (max-width: 640px) {
+      header.ref-header {
+        align-items:flex-start;
+      }
+      .title-block h1 {
+        font-size:1.4rem;
+      }
+    }
   </style>
 </head>
 <body>
@@ -263,6 +293,12 @@
         <span class="icon">←</span>
         <span>Back to Reflections</span>
       </a>
+
+      <!-- Cover icon in the header -->
+      <img src="paradoxofgod.jpg"
+           alt="Cover — The Paradox of God"
+           class="cover-icon">
+
       <div class="title-block">
         <h1>The Paradox of God</h1>
         <p class="sub">A Solitude Reflection by Ninox Antolihao</p>
@@ -386,13 +422,13 @@
 
   <script>
     (function () {
-      const audio    = document.getElementById('reflectionAudio');
+      const audio     = document.getElementById('reflectionAudio');
       const replayBtn = document.getElementById('replayBtn');
       const shareBtn  = document.getElementById('shareBtn');
       const toast     = document.getElementById('toast');
       const backLink  = document.getElementById('backLink');
 
-      const params        = new URLSearchParams(location.search);
+      const params         = new URLSearchParams(location.search);
       const shouldAutoplay = params.get('autoplay') === '1';
       const hasBackHint    = params.get('back') === '1';
 
@@ -447,7 +483,6 @@
               showToast('Unable to copy link');
             }
           } else {
-            // Older fallback
             const dummy = document.createElement('input');
             dummy.value = url;
             document.body.appendChild(dummy);
